Closed Bug 138125 Opened 23 years ago Closed 23 years ago

Some HTML messages display blank in Simple HTML mode

Categories

(MailNews Core :: MIME, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: BenB, Assigned: emaijala+moz)

References

Details

Attachments

(5 files, 2 obsolete files)

It's probably the same bug as bug 126887 and bug 137885, but let's use this one to track the messages that don't display at all. ----- Additional Comments From ere@atp.fi in bug 30888 2002-04-17 22:33 ----- The [...] message [...] just didn't show anything when I chose "Simple HTML". Is there a reason for this? Another minor thing is that the plain text menu choice has double "as" ("View Message Body as As Plain Text"). <http://bugzilla.mozilla.org/showattachment.cgi?attach_id=79768> -------------- I have a report from another user that m/r messages sent from Mozilla with embedded images are not displayed. He says: When "view body as plaintext" is selected the text/plain is not shown if the message contains html + image. Just send from Mozilla text+html msg which contains image (multipart/alternative + multipart/related). I don't care about this and probably will not comment on bugzilla about this but others may.
QA Contact: gayatri → esther
I see this too. I have a message (Content-Type: Multipart/Alternative) that contains a plain text version of its contents (Content-Type: Text/Plain) and an HTML version (Content-Type: Text/HTML) without images. View Message Body "As Original HTML" and "As Plain Text" work as expected but when "As Simple HTML" is selected, nothing is displayed.
Three of the messages in this file (Mozilla mailbox format) won't display at all in Simple HTML mode. The *extremely similar* fourth message (`Jazz CDs on Sale!') does display OK, so it ought to help us narrow down what's wrong with the others.
One of these 2 also exposes an apparent bug in the `Disable cookies in MailNews' pref -- I'll report this separately.
Blocks: 160315
No longer blocks: 160315
Blocks: 160310
Note: I see this with 8-6 trunk builds only at this time. The branch 8-6 builds don't have view Simple HTML and View as Plain Text options.
I'm seeing this problem on quite a few messages. I can provide examples if necessary; Ben - do you have any plans to fix this? Gerv
Adding relnote keyword
Keywords: relnote
No, it depends on bug 126887 to be fixed (dependency added now). I spent so much time on this already (one week) (before 30888 got checked in) that I'd like someone from i18n or MIME (esp. nhotta or ducarroz) to look at it first and give some input and preferably fix that bug.
Depends on: 126887
This patch will fix these two issues: - parse_eof() of the superclass must be called first in parse_eof() to flush buffered data - parse_line() must take length into account The problem messages I tried seemed to work great with this patch.
Comment on attachment 94789 [details] [diff] [review] Patch to fix issues in mimethsa.cpp I forgot plain text mode. Patch with additions coming soon.
Attachment #94789 - Attachment is obsolete: true
Does this also solve the issue in bug 160310?
Same changes as before, also applied to plain text conversion. Includes also a more robust UTF8 to UCS2 conversion. I tried to crash a'la bug 160310, but didn't encounter problems. This might help there also, although more extensive testing is required.
This patch fixes all messages I've tested.
Attachment #94791 - Attachment is obsolete: true
Ben, I've tried the patch in Windows and Linux. Both work great. Any chance of a review?
(For all:) Thanks a lot, Ere, that you are trzing to fix this bug. Really appreciated! I did try the important part of the first patch, but it didn't work for me. I did not have a chance yet to try out your new patch nor will I in the next days, sorry. Free free to assign to bug to you, Ere, if you want.
Taking.
Assignee: ben.bucksch → ere
Attachment #94960 - Flags: review+
Comment on attachment 94960 [details] [diff] [review] Patch to fix everything as before + some issues with multipart messages Looks fine to me, good job Ere. R=ducarroz
Comment on attachment 94960 [details] [diff] [review] Patch to fix everything as before + some issues with multipart messages thanks, ere, sr=bienvenu
Attachment #94960 - Flags: superreview+
Fix checked in the trunk
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
The fix works for me as well now. Thanks a lot, ere! :-) However, I see a problem: During display of HTML-only mails (both those that displayed blank before and those that displayed correctly before) in Plaintext-Only mode, I get no line breaks. I'll investigate later.
*** Bug 167384 has been marked as a duplicate of this bug. ***
The linefeed stuff of plain text display of HTML mails is in bug 170058.
I tested this with the 11-21-2002 trunk builds and the attached folders with messages noted in comments 2, 3 4 or 5 . None of the messages display any content when viewing in Simple HTML but do display contend when viewing in Original HTML and Plain Text. Am I missing something. I was able to see the message content in the attached folder for one of the duped bugs 167384. I'm using winxp, Ere are these messages displaying for you?
same results for macosx and linux with 11-25-2002trunk builds, I don't see anything in the message body when viewing in Simple HTML.
Esther, this is strange because those same messages display OK for me using the 2002-11-18 (Mach-O) build, and have ever since Ere's fix. So I would have marked this bug VERIFIED FIXED. OTOH, while checking on this I came across another message that comes up OK in Simple HTML mode (this bug), but blank in Plain Text mode (bug 137027). It really belongs with the latter bug, so I attached it there.
Something has regressed recently. Worked fine also in build 20021114, but now with 20021123 it's broken for me too. I'll try to see if I spot something.
WFM in 20021119, FFM in 20021120.
I'm pretty sure the checkins for bug 177994 have caused this to break again.
Going to reopen
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
I filed bug 182021 to track the regression, because the cause seems to be different, just the same symptom.
esther, can you maybe try an older build? We could then verifiy that the code-bug in this bug has been fixed and use the other bug for tracking the regression.
OK, so I turned back the hands of time and tested again with trunk builds 20021119 on winxp and 20021118 on linux and 20021117 on macos9 this was fixed. Since there is a new bug for the regression I will verify this resolved fixed and comment in the new bug to test these mail messages as part of the testing scenario.
Status: REOPENED → RESOLVED
Closed: 23 years ago23 years ago
Resolution: --- → FIXED
verified
Status: RESOLVED → VERIFIED
Keywords: relnote
*** Bug 148907 has been marked as a duplicate of this bug. ***
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: