Fix for bug 138125. Patch submitted by ere@atp.fi (Ere Maijala). Call super class parse_eof fist. Also fix some I18N convertion. R=ducarroz, SR=bienvenu