mailnews/mime/src/mimethpl.cpp
@@ -92,16 +92,17 @@ MimeInlineTextHTMLAsPlaintext_parse_begin (MimeObject *obj)
 static int
 MimeInlineTextHTMLAsPlaintext_parse_eof (MimeObject *obj, PRBool abort_p)
 {
+  if (obj->closed_p)
+    return 0;
+  int status = ((MimeObjectClass*)&MIME_SUPERCLASS)->parse_eof(obj, abort_p);
+  if (status < 0)
+    return status;
   MimeInlineTextHTMLAsPlaintext *textHTMLPlain =
                                        (MimeInlineTextHTMLAsPlaintext *) obj;
 
-  /* This closed_p prevents a crash, but also prevents the display of messages
-     with only "text/html" (without charset) as Content-type. See the comment
-     about call sequence below. */
-  if (obj->closed_p || !textHTMLPlain || !textHTMLPlain->complete_buffer)
-    // This actually *does* happen. See below.
+  if (!textHTMLPlain || !textHTMLPlain->complete_buffer)
   {
-    return -1;
+    return 0;
   }
   nsString& cb = *(textHTMLPlain->complete_buffer);
   nsString asPlaintext;
@@ -116,19 +117,14 @@ MimeInlineTextHTMLAsPlaintext_parse_eof (MimeObject *obj, PRBool abort_p)
 
   nsCAutoString resultCStr = NS_ConvertUCS2toUTF8(asPlaintext);
   // TODO parse each line independently
-  int status = ((MimeObjectClass*)&MIME_SUPERCLASS)->parse_line(
+  status = ((MimeObjectClass*)&MIME_SUPERCLASS)->parse_line(
                              NS_CONST_CAST(char*, resultCStr.get()),
                              resultCStr.Length(),
                              obj);
-  if (status < 0)
-    return status;
 
-  /* libmime likes to call |eof| several times. :-( Filed bug 126887.
-     To prevent writing the same message several times, I delete the
-     buffer content here. */
   cb.Truncate();
 
-  return ((MimeObjectClass*)&MIME_SUPERCLASS)->parse_eof(obj, abort_p);
+  return status;
 }
 
 void
@@ -174,7 +170,11 @@ printf("Can't output: %s\n", line);
     I don't know, which odd circumstances might arise and how libmime
     will behave then. It's not worth the trouble for me to figure this all out.
    */
-  (textHTMLPlain->complete_buffer)->Append(NS_ConvertUTF8toUCS2(line));
+  nsCString linestr(line, length);
+  NS_ConvertUTF8toUCS2 line_ucs2(linestr.get());
+  if (length && line_ucs2.IsEmpty())
+    line_ucs2.AssignWithConversion(linestr.get());
+  (textHTMLPlain->complete_buffer)->Append(line_ucs2);
 
   return 0;
 }
